# openaec-docs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
crates/docs-server/: Cargo.toml
crates/docs-server/src/: config.rs  error.rs  main.rs  state.rs  tenant.rs
crates/docs-server/src/auth/: jwt.rs  mod.rs  oidc.rs
crates/docs-server/src/db/: projects.rs  users.rs
crates/docs-server/src/integrations/: bcf_platform.rs  bim_validator.rs  mod.rs
crates/docs-server/src/models/: project.rs  user.rs
crates/docs-server/src/routes/: auth_routes.rs  directories.rs  files.rs  health.rs  manifests.rs  mod.rs  projects.rs
crates/docs-server/src/webdav/: mod.rs  propfind.rs  types.rs
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/shell/: AppBar.tsx  AppShell.tsx  Backstage.tsx  Ribbon.tsx  StatusBar.tsx
frontend/src/config/: brand.ts  injectBrandStyles.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ProjectList.tsx  ProjectView.tsx
frontend/src/types/: api.ts
migrations/: 001_initial_schema.sql
