[package]
name = "docs-server"
description = "OpenAEC Docs — BIM Document Management Server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "docs-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Encoding
base64 = "0.22"
urlencoding = "2"

# Auth
jsonwebtoken = "9"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"

# XML (WebDAV PROPFIND parsing)
quick-xml = "0.37"

# OpenAEC shared cloud integration (manifest/WEFC support)
openaec-cloud = { git = "https://github.com/OpenAEC-Foundation/openaec-files.git" }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
